# TradeML

./: .env.template  .gitattributes  .gitignore  AGENTS.md  Architecture_SSOT.md  CLAUDE.md  DEV_GUIDE.md  DIRECTION_CONSOLIDATION_PACKET.md  Data_Sourcing_Playbook.md  EDGE_SCHEDULER_PER_VENDOR_PLAN.md  HANDOFF.md  IMPLEMENTATION_PLAN_PHASE7.md  Makefile  PHASE_6_PROGRESS.md  PROGRESS.md  QUICK_REFERENCE.md  README.md  SSOT.md  SSOT_V2.md  SSOT_V3.md  STATUS.md  TradeML_Blueprint.md  architecture_carve_out.md  bootstrap.sh  data-node-redesign.md  data_node_review_plan.md  install_dashboard.sh  install_systemd.sh  patch.diff  pyproject.toml  pytest.ini  requirements-pi.txt  requirements.txt  rpi_wizard.py  setup.py  updated_node_spec.md  upgrade_data_pipeline.md
.claude/: settings.local.json
configs/: backfill.yml  curator.yml  edge.yml  endpoints.yml  entitlements.yml  equities_xs.yml  node.yml  router.yml
data_layer/: schemas.py
data_node/: __init__.py  __main__.py  budgets.py  db.py  fetchers.py  maintenance.py  planner.py  qc.py  qc_weekly.py  stages.py  ui.py  vendor_limits.py  worker.py
docs/: AUTOPILOT_ROADMAP.md  Data_Sources_Detail.txt  Data_Sourcing_Playbook.md  FUTURE_DATA_VENDOR_MAP_2026-04-10.md  Provider_Doc_Audit.md  Provider_Role_Matrix.md  RPI_Sync_Blueprint.md  TESTING.md  provider_contract_audit_2026-04-09.md  rpi_wizard.md
execution/: __init__.py  simulate.py
feature_store/: __init__.py
infra/: docker-compose.yml
labeling/: __init__.py
legacy/: README.md
ml_testing/: README.md  build_intraday_fixture.py  run_intraday_smoke.py
(+422 files in other folders)
